maknuti viška komentari i formatirane datoteke